Feature/p002271 6120 exim and adjust search (#9)
* feat: added getByName and adjusted search endpoint

* feat: added ex-import, added getByName, fixed searchcriteria schema

* fix: adjust app.props

---------
